--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     background-color: white;
     box-shadow: 1px 2px 8px rgba(253, 253, 253, 0.65);
     height: 823px;
-    margin: 30vh auto 30vh auto;
+    margin: 28vh auto 28vh auto;
     width: 1163px;
     display: flex;
 }
@@ -176,7 +176,8 @@ input {
 
 }
 
-#password:invalid {
+#password,
+#confirm:invalid {
     border: 1px solid red;
 
 }
